@@ -101,11 +101,13 @@ import fr.gouv.vitam.metadata.api.exception.MetaDataNotFoundException;
 import fr.gouv.vitam.metadata.core.config.ElasticsearchExternalMetadataMapping;
 import fr.gouv.vitam.metadata.core.config.ElasticsearchMetadataIndexManager;
 import fr.gouv.vitam.metadata.core.mapping.MappingLoader;
+import fr.gouv.vitam.metadata.core.model.RequestById;
 import fr.gouv.vitam.metadata.core.model.UpdatedDocument;
 import fr.gouv.vitam.metadata.core.trigger.FieldHistoryManager;
 import fr.gouv.vitam.metadata.core.trigger.History;
 import fr.gouv.vitam.metadata.core.validation.CachedArchiveUnitProfileLoader;
 import fr.gouv.vitam.metadata.core.validation.CachedSchemaValidatorLoader;
+import fr.gouv.vitam.metadata.core.validation.MetadataValidationErrorCode;
 import fr.gouv.vitam.metadata.core.validation.MetadataValidationException;
 import fr.gouv.vitam.metadata.core.validation.OntologyValidator;
 import fr.gouv.vitam.metadata.core.validation.UnitValidator;
@@ -125,6 +127,7 @@ import java.io.FileNotFoundException;
 import java.nio.charset.StandardCharsets;
 import java.time.temporal.ChronoUnit;
 import java.util.Arrays;
+import java.util.Collection;
 import java.util.Collections;
 import java.util.HashMap;
 import java.util.HashSet;
@@ -430,15 +433,15 @@ public class DbRequestTest {
             // Now execute the request
             OntologyValidator ontologyValidator = mock(OntologyValidator.class);
             doAnswer(args -> args.getArgument(0)).when(ontologyValidator).verifyAndReplaceFields(any());
-
+            RequestById requestById = new RequestById(uuid.toString(), updateParser);
             dbRequest.execUpdateRequest(
-                updateParser,
-                uuid.toString(),
+                List.of(requestById),
                 UNIT,
                 ontologyValidator,
                 mock(UnitValidator.class),
                 Collections.emptyList(),
-                true
+                true,
+                false
             );
 
             // SELECT ALL
@@ -496,18 +499,19 @@ public class DbRequestTest {
             updateParser.parse(updateRequest);
             LOGGER.debug("UpdateParser: {}", updateParser);
 
+            RequestById requestById = new RequestById(uuid.toString(), updateParser);
             // Now execute the request
             OntologyValidator ontologyValidator = mock(OntologyValidator.class);
             doAnswer(args -> args.getArgument(0)).when(ontologyValidator).verifyAndReplaceFields(any());
 
             dbRequest.execUpdateRequest(
-                updateParser,
-                uuid.toString(),
+                List.of(requestById),
                 UNIT,
                 ontologyValidator,
                 mock(UnitValidator.class),
                 Collections.emptyList(),
-                true
+                true,
+                false
             );
 
             // SELECT ALL
@@ -734,15 +738,15 @@ public class DbRequestTest {
             // Now execute the request
             OntologyValidator ontologyValidator = mock(OntologyValidator.class);
             doAnswer(args -> args.getArgument(0)).when(ontologyValidator).verifyAndReplaceFields(any());
-
+            RequestById requestById = new RequestById(uuid.toString(), requestParser);
             dbRequest.execUpdateRequest(
-                requestParser,
-                uuid.toString(),
+                List.of(requestById),
                 UNIT,
                 ontologyValidator,
                 mock(UnitValidator.class),
                 Collections.emptyList(),
-                true
+                true,
+                false
             );
 
             // SELECT ALL
@@ -811,15 +815,15 @@ public class DbRequestTest {
             // Now execute the request
             OntologyValidator ontologyValidator = mock(OntologyValidator.class);
             doAnswer(args -> args.getArgument(0)).when(ontologyValidator).verifyAndReplaceFields(any());
-
+            RequestById requestById = new RequestById(uuid.toString(), requestParser);
             dbRequest.execUpdateRequest(
-                requestParser,
-                uuid.toString(),
+                List.of(requestById),
                 UNIT,
                 ontologyValidator,
                 mock(UnitValidator.class),
                 Collections.emptyList(),
-                true
+                true,
+                false
             );
 
             // SELECT ALL
@@ -937,15 +941,15 @@ public class DbRequestTest {
             // Now execute the request
             OntologyValidator ontologyValidator = mock(OntologyValidator.class);
             doAnswer(args -> args.getArgument(0)).when(ontologyValidator).verifyAndReplaceFields(any());
-
+            RequestById requestById = new RequestById(uuid.toString(), requestParser);
             dbRequest.execUpdateRequest(
-                requestParser,
-                uuid.toString(),
+                List.of(requestById),
                 UNIT,
                 ontologyValidator,
                 mock(UnitValidator.class),
                 Collections.emptyList(),
-                true
+                true,
+                false
             );
 
             // SELECT ALL
@@ -1050,15 +1054,15 @@ public class DbRequestTest {
 
         OntologyValidator ontologyValidator = new OntologyValidator(() -> ontologyModels);
         UnitValidator unitValidator = new UnitValidator(archiveUnitProfileLoader, schemaValidatorLoader);
-
-        UpdatedDocument updatedDocument = dbRequest.execUpdateRequest(
-            updateParser,
-            uuid,
+        RequestById requestById = new RequestById(uuid, updateParser);
+        Collection<UpdatedDocument> updatedDocuments = dbRequest.execUpdateRequest(
+            List.of(requestById),
             UNIT,
             ontologyValidator,
             unitValidator,
             Collections.emptyList(),
-            true
+            true,
+            false
         );
 
         // Then
@@ -1077,10 +1081,14 @@ public class DbRequestTest {
         JsonAssert.assertJsonEquals(expected, after);
         JsonAssert.assertJsonEquals(
             BsonHelper.stringify(initialUnit),
-            JsonHandler.unprettyPrint(updatedDocument.getBeforeUpdate())
+            JsonHandler.unprettyPrint(updatedDocuments.stream().findFirst().get().getBeforeUpdate())
         );
-        JsonAssert.assertJsonEquals(expected, JsonHandler.unprettyPrint(updatedDocument.getAfterUpdate()));
-        assertThat(updatedDocument.getDocumentId()).isEqualTo(uuid);
+        JsonAssert.assertJsonEquals(
+            expected,
+            JsonHandler.unprettyPrint(updatedDocuments.stream().findFirst().get().getAfterUpdate())
+        );
+        String documentIdFound = updatedDocuments.stream().findFirst().get().getDocumentId();
+        assertThat(documentIdFound).isEqualTo(uuid);
     }
 
     @RunWithCustomExecutor
@@ -1136,20 +1144,26 @@ public class DbRequestTest {
 
         OntologyValidator ontologyValidator = new OntologyValidator(() -> ontologyModels);
         UnitValidator unitValidator = new UnitValidator(archiveUnitProfileLoader, schemaValidatorLoader);
-
+        RequestById requestById = new RequestById(uuid, updateParser);
         // Then
-        assertThatThrownBy(
-            () ->
-                dbRequest.execUpdateRequest(
-                    updateParser,
-                    uuid,
-                    UNIT,
-                    ontologyValidator,
-                    unitValidator,
-                    Collections.emptyList(),
-                    true
-                )
-        ).isInstanceOf(MetadataValidationException.class);
+
+        List<UpdatedDocument> updatedDocumentsResult = dbRequest.execUpdateRequest(
+            List.of(requestById),
+            UNIT,
+            ontologyValidator,
+            unitValidator,
+            Collections.emptyList(),
+            true,
+            false
+        );
+
+        UpdatedDocument updatedDocument = updatedDocumentsResult.stream().findFirst().get();
+        assertNotNull(updatedDocument);
+        assertEquals(updatedDocument.getStatus(), UpdatedDocument.UpdatedDocumentStatus.FAILED);
+        assertTrue(updatedDocument.getFailureMessage().contains("declared in ontology with a wrong format"));
+        assertTrue(
+            updatedDocument.getValidationErrorCode().equals(MetadataValidationErrorCode.ONTOLOGY_VALIDATION_FAILURE)
+        );
 
         String expected = BsonHelper.stringify(initialUnit);
         String after = JsonHandler.unprettyPrint(UNIT.getCollection().find(Filters.eq("_id", uuid)).first());
@@ -1203,20 +1217,27 @@ public class DbRequestTest {
 
         OntologyValidator ontologyValidator = new OntologyValidator(() -> ontologyModels);
         UnitValidator unitValidator = new UnitValidator(archiveUnitProfileLoader, schemaValidatorLoader);
-
+        RequestById requestById = new RequestById(uuid, updateParser);
         // Then
-        assertThatThrownBy(
-            () ->
-                dbRequest.execUpdateRequest(
-                    updateParser,
-                    uuid,
-                    UNIT,
-                    ontologyValidator,
-                    unitValidator,
-                    Collections.emptyList(),
-                    true
-                )
-        ).isInstanceOf(MetadataValidationException.class);
+        List<UpdatedDocument> updatedDocumentsResult = dbRequest.execUpdateRequest(
+            List.of(requestById),
+            UNIT,
+            ontologyValidator,
+            unitValidator,
+            Collections.emptyList(),
+            true,
+            false
+        );
+
+        UpdatedDocument updatedDocument = updatedDocumentsResult.stream().findFirst().get();
+        assertNotNull(updatedDocument);
+        assertEquals(updatedDocument.getStatus(), UpdatedDocument.UpdatedDocumentStatus.FAILED);
+        assertTrue(updatedDocument.getFailureMessage().contains("Document schema validation failed"));
+        assertTrue(
+            updatedDocument
+                .getValidationErrorCode()
+                .equals(MetadataValidationErrorCode.ARCHIVE_UNIT_PROFILE_SCHEMA_VALIDATION_FAILURE)
+        );
 
         String expected = BsonHelper.stringify(initialUnit);
         String after = JsonHandler.unprettyPrint(UNIT.getCollection().find(Filters.eq("_id", uuid)).first());
@@ -1260,20 +1281,26 @@ public class DbRequestTest {
 
         OntologyValidator ontologyValidator = new OntologyValidator(() -> ontologyModels);
         UnitValidator unitValidator = new UnitValidator(archiveUnitProfileLoader, schemaValidatorLoader);
-
+        RequestById requestById = new RequestById(uuid, updateParser);
         // Then
-        assertThatThrownBy(
-            () ->
-                dbRequest.execUpdateRequest(
-                    updateParser,
-                    uuid,
-                    UNIT,
-                    ontologyValidator,
-                    unitValidator,
-                    Collections.emptyList(),
-                    true
-                )
-        ).isInstanceOf(MetadataValidationException.class);
+        List<UpdatedDocument> updatedDocumentsResult = dbRequest.execUpdateRequest(
+            List.of(requestById),
+            UNIT,
+            ontologyValidator,
+            unitValidator,
+            Collections.emptyList(),
+            true,
+            false
+        );
+
+        assertFalse(updatedDocumentsResult.isEmpty());
+        UpdatedDocument updatedDocument = updatedDocumentsResult.stream().findFirst().get();
+        assertNotNull(updatedDocument);
+        assertEquals(updatedDocument.getStatus(), UpdatedDocument.UpdatedDocumentStatus.FAILED);
+        assertTrue(updatedDocument.getFailureMessage().contains("Document schema validation failed"));
+        assertTrue(
+            updatedDocument.getValidationErrorCode().equals(MetadataValidationErrorCode.SCHEMA_VALIDATION_FAILURE)
+        );
 
         String expected = BsonHelper.stringify(initialUnit);
         String after = JsonHandler.unprettyPrint(UNIT.getCollection().find(Filters.eq("_id", uuid)).first());
@@ -2320,15 +2347,15 @@ public class DbRequestTest {
 
         OntologyValidator dummyOntologyValidator = mock(OntologyValidator.class);
         doAnswer(args -> args.getArgument(0)).when(dummyOntologyValidator).verifyAndReplaceFields(any());
-
+        RequestById requestById = new RequestById(unitId, updateParser);
         dbRequest.execUpdateRequest(
-            updateParser,
-            unitId,
+            List.of(requestById),
             UNIT,
             dummyOntologyValidator,
             mock(UnitValidator.class),
             Collections.emptyList(),
-            true
+            true,
+            false
         );
         UNIT.getEsClient().refreshIndex(UNIT, TENANT_ID_0);
 
@@ -2350,15 +2377,15 @@ public class DbRequestTest {
         final UpdateParserMultiple updateParser5 = new UpdateParserMultiple(mongoDbVarNameAdapter);
         updateParser5.parse(updateRequest5);
         LOGGER.debug("UpdateParser: {}", updateParser5.getRequest());
-
+        RequestById requestById5 = new RequestById(unitId, updateParser5);
         dbRequest.execUpdateRequest(
-            updateParser5,
-            unitId,
+            List.of(requestById5),
             UNIT,
             dummyOntologyValidator,
             mock(UnitValidator.class),
             Collections.emptyList(),
-            true
+            true,
+            false
         );
         UNIT.getEsClient().refreshIndex(UNIT, TENANT_ID_0);
 
@@ -2392,38 +2419,43 @@ public class DbRequestTest {
         OntologyValidator ontologyValidator = new OntologyValidator(Collections::emptyList);
         UnitValidator unitValidator = new UnitValidator(archiveUnitProfileLoader, schemaValidatorLoader);
 
-        try {
-            final JsonNode updateRequest2 = JsonHandler.getFromString(REQUEST_UPDATE_INDEX_TEST_KO_SECONDARY_SCHEMA);
-            final UpdateParserMultiple updateParser2 = new UpdateParserMultiple(mongoDbVarNameAdapter);
-            updateParser2.parse(updateRequest2);
-            LOGGER.debug("UpdateParser: {}", updateParser2.getRequest());
-            dbRequest.execUpdateRequest(
-                updateParser2,
-                unitId,
-                UNIT,
-                ontologyValidator,
-                unitValidator,
-                Collections.emptyList(),
-                true
-            );
-            fail("should throw an exception cause of the additional schema");
-        } catch (MetadataValidationException e) {
-            assertTrue(e.getCause().getMessage().contains("\"missing\":[\"specificField\"]"));
-        }
+        final JsonNode updateRequest2 = JsonHandler.getFromString(REQUEST_UPDATE_INDEX_TEST_KO_SECONDARY_SCHEMA);
+        final UpdateParserMultiple updateParser2 = new UpdateParserMultiple(mongoDbVarNameAdapter);
+        updateParser2.parse(updateRequest2);
+        LOGGER.debug("UpdateParser: {}", updateParser2.getRequest());
+        RequestById requestById2 = new RequestById(unitId, updateParser2);
+        List<UpdatedDocument> updatedDocuments = dbRequest.execUpdateRequest(
+            List.of(requestById2),
+            UNIT,
+            ontologyValidator,
+            unitValidator,
+            Collections.emptyList(),
+            true,
+            false
+        );
+        UpdatedDocument updatedDocumentResult = updatedDocuments.stream().findFirst().get();
+
+        assertTrue(updatedDocumentResult.getFailureMessage().contains("\"missing\":[\"specificField\"]"));
+        assertTrue(
+            updatedDocumentResult
+                .getValidationErrorCode()
+                .equals(MetadataValidationErrorCode.ARCHIVE_UNIT_PROFILE_SCHEMA_VALIDATION_FAILURE)
+        );
 
         // add a new field : specificField
         final JsonNode updateRequestSchema = JsonHandler.getFromString(REQUEST_UPDATE_INDEX_TEST_OK_SECONDARY_SCHEMA);
         final UpdateParserMultiple updateParserSchema = new UpdateParserMultiple(mongoDbVarNameAdapter);
         updateParserSchema.parse(updateRequestSchema);
         LOGGER.debug("UpdateParser: {}", updateParserSchema.getRequest());
+        RequestById requestByIdSchema = new RequestById(unitId, updateParserSchema);
         dbRequest.execUpdateRequest(
-            updateParserSchema,
-            unitId,
+            List.of(requestByIdSchema),
             UNIT,
             ontologyValidator,
             unitValidator,
             Collections.emptyList(),
-            true
+            true,
+            false
         );
         UNIT.getEsClient().refreshIndex(UNIT, TENANT_ID_0);
 
@@ -2491,18 +2523,20 @@ public class DbRequestTest {
 
         OntologyValidator dummyOntologyValidator = mock(OntologyValidator.class);
         doAnswer(args -> args.getArgument(0)).when(dummyOntologyValidator).verifyAndReplaceFields(any());
-
-        UpdatedDocument updatedDocument1 = dbRequest.execUpdateRequest(
-            updateParser,
-            unitId,
+        RequestById requestById = new RequestById(unitId, updateParser);
+        Collection<UpdatedDocument> updatedDocument1 = dbRequest.execUpdateRequest(
+            List.of(requestById),
             UNIT,
             dummyOntologyValidator,
             mock(UnitValidator.class),
             Collections.emptyList(),
+            false,
             false
         );
         UNIT.getEsClient().refreshIndex(UNIT, TENANT_ID_0);
-        assertNotEquals(updatedDocument1.getBeforeUpdate(), updatedDocument1.getAfterUpdate());
+
+        final UpdatedDocument updatedDocument = updatedDocument1.stream().findFirst().get();
+        assertNotEquals(updatedDocument.getBeforeUpdate(), updatedDocument.getAfterUpdate());
 
         // select query
         SelectParserMultiple selectParserUnit = new SelectParserMultiple(mongoDbVarNameAdapter);
@@ -2521,19 +2555,22 @@ public class DbRequestTest {
 
         // update title Archive 3 to Archive 2
         doAnswer(args -> args.getArgument(0)).when(dummyOntologyValidator).verifyAndReplaceFields(any());
-
-        UpdatedDocument updatedDocument2 = dbRequest.execUpdateRequest(
-            updateParser,
-            unitId,
+        RequestById requestByIdNew = new RequestById(unitId, selectParserUnit);
+        Collection<UpdatedDocument> updatedDocument2 = dbRequest.execUpdateRequest(
+            List.of(requestByIdNew),
             UNIT,
             dummyOntologyValidator,
             mock(UnitValidator.class),
             Collections.emptyList(),
+            false,
             false
         );
         UNIT.getEsClient().refreshIndex(UNIT, TENANT_ID_0);
-        assertEquals(updatedDocument2.getBeforeUpdate(), updatedDocument2.getAfterUpdate());
-        assertFalse(updatedDocument2.isUpdated());
+        assertEquals(
+            updatedDocument2.stream().findFirst().get().getBeforeUpdate(),
+            updatedDocument2.stream().findFirst().get().getAfterUpdate()
+        );
+        assertFalse(updatedDocument2.stream().findFirst().get().isUpdated());
 
         // select the unit and check the non modification
         resultSelectUnit = dbRequest.execRequest(selectParserUnit, Collections.emptyList());
@@ -2566,15 +2603,15 @@ public class DbRequestTest {
 
         OntologyValidator ontologyValidator = mock(OntologyValidator.class);
         doAnswer(args -> args.getArgument(0)).when(ontologyValidator).verifyAndReplaceFields(any());
-
+        RequestById requestById = new RequestById("aeaqaaaaaagbcaacabg44ak45e54criaaaaq", updateParser);
         dbRequest.execUpdateRequest(
-            updateParser,
-            "aeaqaaaaaagbcaacabg44ak45e54criaaaaq",
+            List.of(requestById),
             UNIT,
             ontologyValidator,
             mock(UnitValidator.class),
             Collections.emptyList(),
-            true
+            true,
+            false
         );
     }
 
@@ -3616,16 +3653,17 @@ public class DbRequestTest {
 
         OntologyValidator ontologyValidator = new OntologyValidator(() -> ontologyModels);
         UnitValidator unitValidator = new UnitValidator(archiveUnitProfileLoader, schemaValidatorLoader);
-
+        RequestById requestById = new RequestById("aeaqaaaabeghay2jabzuaalbarkww4iaaaba", updateParser);
         // When
-        UpdatedDocument updatedDocument = dbRequest.execUpdateRequest(
-            updateParser,
-            uuid,
+        Collection<UpdatedDocument> updatedDocument = dbRequest.execUpdateRequest(
+            List.of(requestById),
+            //  uuid,
             UNIT,
             ontologyValidator,
             unitValidator,
             Collections.emptyList(),
-            true
+            true,
+            false
         );
 
         // Then
@@ -3633,8 +3671,8 @@ public class DbRequestTest {
             "\n",
             VitamDocument.getConcernedDiffLines(
                 VitamDocument.getUnifiedDiff(
-                    JsonHandler.prettyPrint(updatedDocument.getBeforeUpdate()),
-                    JsonHandler.prettyPrint(updatedDocument.getAfterUpdate())
+                    JsonHandler.prettyPrint(updatedDocument.stream().findFirst().get().getBeforeUpdate()),
+                    JsonHandler.prettyPrint(updatedDocument.stream().findFirst().get().getAfterUpdate())
                 )
             )
         );
